vlib/v/checker/tests/for_in_map_one_variable_err.out
vlib/v/checker/tests/for_in_map_one_variable_err.vv:3:6: error: declare a key and a value variable when ranging a map: `for key, val in map {`
use `_` if you do not need the variable
    1 | fn main() {
    2 |     kvs := {'foo':'bar'}
    3 |     for k in kvs {
      |         ^
    4 |         println('$k')
    5 |     }
